--- a/Aryan Child Adoption/src/userinterface/FundingFinanceRole/FinanceWorkAreaJPanel.form
+++ b/Aryan Child Adoption/src/userinterface/FundingFinanceRole/FinanceWorkAreaJPanel.form
@@ -38,7 +38,7 @@
         <Component class="javax.swing.JTable" name="jTable1">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="SansSerif" size="12" style="0"/>
+              <Font name="Arial Black" size="12" style="0"/>
             </Property>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="6" rowCount="0">
@@ -46,7 +46,7 @@
                 <Column editable="false" title="Sender" type="java.lang.Object"/>
                 <Column editable="false" title="Receiver" type="java.lang.Object"/>
                 <Column editable="false" title="Child ID" type="java.lang.Object"/>
-                <Column editable="false" title="Remarks" type="java.lang.Object"/>
+                <Column editable="false" title="Remarks/Comments" type="java.lang.Object"/>
                 <Column editable="false" title="Status" type="java.lang.Object"/>
               </Table>
             </Property>
@@ -94,7 +94,7 @@
     <Component class="javax.swing.JButton" name="btnAssigToMe">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="SansSerif" size="13" style="1"/>
+          <Font name="Arial Black" size="14" style="1"/>
         </Property>
         <Property name="text" type="java.lang.String" value="Assign To Me"/>
       </Properties>
@@ -126,7 +126,7 @@
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="SansSerif" size="18" style="1"/>
+          <Font name="Arial Black" size="14" style="1"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
         <Property name="text" type="java.lang.String" value="VIEW FUND REQUESTS"/>
