--- a/Aryan Child Adoption/src/userinterface/FundingFinanceRole/FundingWorkArea.form
+++ b/Aryan Child Adoption/src/userinterface/FundingFinanceRole/FundingWorkArea.form
@@ -60,7 +60,7 @@
         <Container class="javax.swing.JPanel" name="jPanel3">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="99" green="cc" red="ff" type="rgb"/>
+              <Color blue="33" green="33" red="ff" type="rgb"/>
             </Property>
             <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[280, 148]"/>
@@ -109,7 +109,7 @@
                 <Component class="javax.swing.JLabel" name="DonorWorkArea">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                      <Font name="SansSerif" size="14" style="1"/>
+                      <Font name="Arial Black" size="14" style="1"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="Fund Request Work Area"/>
                   </Properties>
@@ -159,7 +159,7 @@
                 <Component class="javax.swing.JLabel" name="lblViewStatus">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                      <Font name="SansSerif" size="14" style="1"/>
+                      <Font name="Arial Black" size="14" style="1"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="Transaction Work Area"/>
                   </Properties>
@@ -176,6 +176,9 @@
             </Container>
             <Component class="javax.swing.JLabel" name="jLabel1">
               <Properties>
+                <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="33" green="cc" red="ff" type="rgb"/>
+                </Property>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                   <Image iconType="3" name="/Images/mgr2.png"/>
                 </Property>
@@ -189,7 +192,7 @@
             <Component class="javax.swing.JLabel" name="jLabel3">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="SansSerif" size="13" style="1"/>
+                  <Font name="Arial Black" size="12" style="1"/>
                 </Property>
                 <Property name="horizontalAlignment" type="int" value="4"/>
                 <Property name="text" type="java.lang.String" value="Organization"/>
