--- a/Aryan Child Adoption/src/userinterface/PharmacyOrganisation/PharmacyWorkArea.form
+++ b/Aryan Child Adoption/src/userinterface/PharmacyOrganisation/PharmacyWorkArea.form
@@ -112,7 +112,7 @@
                 <Component class="javax.swing.JLabel" name="PharmacyWorkArea">
                   <Properties>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                      <Font name="SansSerif" size="14" style="1"/>
+                      <Font name="Arial Black" size="12" style="1"/>
                     </Property>
                     <Property name="text" type="java.lang.String" value="Pharmacist Work Area"/>
                   </Properties>
@@ -142,7 +142,7 @@
             <Component class="javax.swing.JLabel" name="jLabel3">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-                  <Font name="SansSerif" size="13" style="1"/>
+                  <Font name="Arial Black" size="12" style="1"/>
                 </Property>
                 <Property name="horizontalAlignment" type="int" value="4"/>
                 <Property name="text" type="java.lang.String" value="Organization"/>
